--- a/CHANGES/6274.doc.rst
+++ b/CHANGES/6274.doc.rst
@@ -1,1 +1,1 @@
-Describe how tiny timeouts can affect performance.
+Added an explanation of how tiny timeouts affect performance to the client reference document.
